Yangloader backwards compatibility
When a device reports a capability whose exact version is not present
in the datastore, the yang loader previously gave up (or only worked
when a single version happened to be stored). It now falls back to the
set of all stored versions of that module, selects the highest version,
and keeps it only when that version is backwards compatible with the
one the device requested.

To support this:
 - YangDataStoreService.readYangModel(name) now returns every stored
   version of the module (Optional<List<GnmiYangModel>>) instead of a
   single model, so callers can choose the best candidate themselves.
 - SchemaContextHolderImpl gains version-comparison helpers that order
   both revision-date (yyyy-MM-dd) and dotted-numeric (X.Y.Z) schemes,
   never comparing across schemes, and picks the highest available
   version via getHighestVersion().
 - The no-version branch now reuses the same highest-version selection
   and looks models up by name rather than by capability.toString().

Tests and the in-memory TestYangDataStoreService are updated to the new
list-returning API.

Jira: GNMI-14
Change-Id: I9bcaca4ff6db112f033d09d9503ded30497a6d29
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Signed-off-by: Jimmi Wimmersjö <jimmi.wimmersjo@smartoptics.com>
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>